ajout tags, commentaire modifier supprimer, event listener for admin route protections

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,5 +23,9 @@ services:
     arguments: ["@lexik_jwt_authentication.encoder"]
     tags:
       - { name: kernel.event_listener, event: kernel.request, priority: 256 }
+
+  App\EventListener\AdminRouteListener:
+    tags:
+      - { name: kernel.event_subscriber }
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
