--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "knplabs/knp-paginator-bundle": "^6.2",
+        "league/html-to-markdown": "^5.1",
         "lexik/jwt-authentication-bundle": "^2.18",
+        "michelf/php-markdown": "*",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.18",
         "sensio/framework-extra-bundle": "^6.1",
