--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,10 +22,18 @@ services:
   App\EventListener\JwtUserListener:
     arguments: ["@lexik_jwt_authentication.encoder"]
     tags:
-      - { name: kernel.event_listener, event: kernel.request, priority: 256 }
+      - { name: kernel.event_subscriber }
 
   App\EventListener\AdminRouteListener:
     tags:
       - { name: kernel.event_subscriber }
+
+  App\EventListener\MonArticleRouteListener:
+    tags:
+      - { name: kernel.event_subscriber }
+  App\EventListener\MonCommentRouteListener:
+    tags:
+      - { name: kernel.event_subscriber }
+
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
