--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+  uploads_directory: "%kernel.project_dir%/public/uploads"
 
 services:
   # default configuration for services in *this* file
@@ -22,18 +23,18 @@ services:
   App\EventListener\JwtUserListener:
     arguments: ["@lexik_jwt_authentication.encoder"]
     tags:
-      - { name: kernel.event_subscriber }
+      - { name: kernel.event_subscriber, priority: 0 }
 
   App\EventListener\AdminRouteListener:
     tags:
-      - { name: kernel.event_subscriber }
+      - { name: kernel.event_subscriber, priority: 1 }
 
   App\EventListener\MonArticleRouteListener:
     tags:
-      - { name: kernel.event_subscriber }
+      - { name: kernel.event_subscriber, priority: 2 }
   App\EventListener\MonCommentRouteListener:
     tags:
-      - { name: kernel.event_subscriber }
+      - { name: kernel.event_subscriber, priority: 3 }
 
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
