--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
+        "guzzlehttp/guzzle": "^7.5",
         "knplabs/knp-paginator-bundle": "^6.2",
         "league/html-to-markdown": "^5.1",
         "lexik/jwt-authentication-bundle": "^2.18",
@@ -19,6 +20,7 @@
         "phpstan/phpdoc-parser": "^1.18",
         "sensio/framework-extra-bundle": "^6.1",
         "soundasleep/html2text": "^2.1",
+        "sunra/php-simple-html-dom-parser": "^1.5",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
         "symfony/doctrine-messenger": "6.1.*",
